<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_move"
        android:icon="@drawable/content_cut_24dp_f3f3f3_fill0_wght400_grad0_opsz24"
        android:title="@string/move"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_favorite_selected"
        android:icon="@drawable/star_24dp_f19e39_fill0_wght400_grad0_opsz24__1_"
        android:title="@string/favorite"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_delete_selected"
        android:icon="@drawable/delete_24dp_ea3323_fill0_wght400_grad0_opsz24"
        android:title="@string/delete"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_move_here"
        android:icon="@drawable/arrow_downward_24dp_f3f3f3_fill0_wght400_grad0_opsz24"
        android:title="@string/move_here"
        android:visible="false"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_cancel_move"
        android:icon="@drawable/close_24dp_f3f3f3_fill0_wght400_grad0_opsz24"
        android:title="@string/cancel"
        android:visible="false"
        app:showAsAction="ifRoom" />
</menu>