<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"

    android:id="@+id/widget_container"
    android:layout_height="wrap_content"
    android:layout_width="wrap_content"
    android:orientation="horizontal"
    android:gravity="center_vertical"
    android:layout_marginStart="3dp"
    android:layout_marginEnd="4dp"
    android:layout_marginTop="3dp"
    android:layout_marginBottom="3dp"
    android:background="@drawable/widget_background_zflip"
    android:padding="8dp">

        <ImageView
            android:id="@+id/widget_icon"
            android:layout_width="45dp"
            android:layout_height="50dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="3dp"
            android:layout_marginBottom="2dp"
            android:contentDescription="@string/widget_icon_description"
            android:src="@drawable/flexipdf_widget_icon"
            android:layout_gravity="center_vertical"
            android:background="@drawable/widget_backgroung_icon_zflip"
            android:visibility="visible"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="3dp"
            android:layout_gravity="center_vertical"
            android:orientation="vertical">

        <TextView
            android:id="@+id/widget_standard_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="7dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="6dp"
            android:padding="5dp"
            android:text="@string/widget_title"
            android:textSize="12sp"
            android:maxLines="1"
            android:ellipsize="end"
            android:textStyle="bold"
            android:textColor="@color/dark_gray"
            android:layout_gravity="start|top"
            android:visibility="visible"
            />

        <TextView
            android:id="@+id/different_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:ellipsize="end"
            android:layout_gravity="center"
            android:maxLines="1"
            android:padding="5dp"
            android:text="@string/widget_message"
            android:textSize="10sp"
            android:textStyle="italic"
            android:textColor="@color/black"
            android:visibility="visible"/>
        </LinearLayout>

</LinearLayout>